--- a/style/account.css
+++ b/style/account.css
@@ -44,7 +44,7 @@
 	display: none;
 	width: 100%; height: 100%;
 }
-.accDish { /* Overrides composition's style '*/
+.accDish { /* Overrides composition's style */
 	background: linear-gradient(to right, #111 0%, #333 100%);
 }
 #accContent .cntComposition {
@@ -204,7 +204,6 @@
 	width: 80%;
 	margin-left: 10%;
 	margin-right: 10%;
-	font-family: sans-serif;
 }
 #accHelp {
 	margin-bottom: 64px;
@@ -290,10 +289,10 @@ input[type="text"].accTokenHovered {
 	margin-bottom: 16px;
 }
 #accDirectory a {
-	font-family: Menomonia;
+	font-family: Trebuchet MS, Menomonia;
 	font-size: 18px;
 	color: #dd9900;
-	font-weight: bold;
+	text-decoration: none;
 }
 #accDirectory a:hover {
 	color: #ffeebb;
@@ -325,7 +324,6 @@ input[type="text"].accTokenHovered {
 	margin-bottom: 16px;
 }
 #audExecute, #audHelp {
-	font-family: Menomonia;
 	font-size: 32px;
 	padding: 12px 16px 12px 16px;
 	text-shadow:
