--- a/style/features.css
+++ b/style/features.css
@@ -726,7 +726,7 @@ input[type="text"].trdInput {
 input[type="text"].trdOutput {
 	border-radius: 4px;
 	border: 1px dashed #555;
-	background: #333;
+	background: rgba(255, 255, 255, 0.1);
 }
 input[type="text"].trdOutput:hover {
 	border: 1px dashed #555;
