--- a/gw2t.css
+++ b/gw2t.css
@@ -3126,6 +3126,9 @@ label:hover {
 	border-radius: 1px;
 }
 
+.cssInline {
+	display: inline-block !important;
+}
 .cssHidden {
 	display: none !important;
 }
