--- a/style/account.css
+++ b/style/account.css
@@ -206,11 +206,11 @@
 	margin-right: 10%;
 }
 #accHelp {
+	margin-top: 32px;
 	margin-bottom: 64px;
 }
 #accManager {
 	text-align: center;
-	margin-bottom: 32px;
 }
 #accManager .accTokenName {
 	display: inline-block;
@@ -540,10 +540,6 @@ input[type="text"].accTokenHovered {
 	line-height: normal;
 	font-variant: normal;
 	font-weight: normal;
-}
-input[type="text"].accTokenNameUsed {
-	background: linear-gradient(to right, #7c7253 0%, transparent 100%);
-	color: #ddff77;
 }
 #chrAccountServer {
 	font-size: 24px;
@@ -2123,7 +2119,8 @@ input[type="text"].bnkCatalogSlotAdd, input[type="text"].bnkCatalogTabRename {
 .bnkSlotDyeName {
 	display: block;
 	position: absolute;
-	top: 4px; left: 6px;
+	top: 4px;
+	left: 6px;
 	line-height: normal;
 	font-size: 12px;
 	color: white;
