--- a/style/account.css
+++ b/style/account.css
@@ -102,6 +102,11 @@
 	color: #bbcc77;
 }
 
+/* Tooltip */
+.itmTooltipMastery {
+	max-width: 580px;
+}
+
 /* Menu
 ----------------------------------------------------------------------------- */
 #accOverhead {
@@ -1815,10 +1820,18 @@ input[type="text"].bnkCatalogSlotAdd, input[type="text"].bnkCatalogTabRename {
 .bnkTab {
 	position: relative;
 }
-.bnkTabSeparator {
+.bnkTabSeparator, .bnkTabDivider {
 	width: 100%; height: 40px;
 	background-image: url("../img/background/tab.png");
 	background-size: 100% 100%;
+}
+.bnkTabDivider {
+	text-align: center;
+}
+.bnkTabDividerText {
+ 	font-family: Menomonia;
+	font-size: 28px;
+	color: #ffeebb;
 }
 .bnkCondense .bnkTabSeparator  {
 	height: 29px;
@@ -1860,6 +1873,7 @@ input[type="text"].bnkCatalogSlotAdd, input[type="text"].bnkCatalogTabRename {
 }
 .bnkTabIcon {
 	display: block;
+	width: 32px; height: 32px;
 	float: left;
 	border-radius: 4px;
 }
@@ -2031,12 +2045,19 @@ input[type="text"].bnkCatalogSlotAdd, input[type="text"].bnkCatalogTabRename {
 .bnkSlotLabel {
 	display: block;
 	position: absolute;
-	top: 14px;
-	left: 8px;
-	font-family: Trebuchet MS, Menomonia;
-	font-size: 14px;
+	top: 4px;
+	left: 6px;
+	line-height: normal;
+	font-size: 12px;
 	color: #ffeebb;
-	text-shadow: 1px 1px 1px #000;
+	text-shadow:
+		0px 1px 1px #000,
+		0px -1px 1px #000,
+		1px 0px 1px #000,
+		-1px 0px 1px #000;
+}
+.bnkCondense .bnkSlotLabel {
+	font-size: 9px;
 }
 .bnkSlotCount {
 	display: block;
@@ -2055,11 +2076,6 @@ input[type="text"].bnkCatalogSlotAdd, input[type="text"].bnkCatalogTabRename {
 	top: 10px;
 	right: 7px;
 	font-size: 13px;
-}
-.bnkCondense .bnkSlotLabel {
-	top: 10px;
-	left: 6px;
-	font-size: 12px;
 }
 .bnkSlotPrice, .bnkSlotPriceBuy, .bnkSlotPriceSell {
 	display: block;
@@ -2622,7 +2638,7 @@ input[type="text"].bnkCatalogSlotAdd, input[type="text"].bnkCatalogTabRename {
 .acc_recipes_weaponsmith_sword { background-position: -3616px 0; }
 .acc_recipes_weaponsmith_upgradecomponent { background-position: -3648px 0; }
 
-/* Lab
+/* Pact Supply
 ----------------------------------------------------------------------------- */
 #pctStatistics {
 	margin-top: 32px;
