--- a/gw2t.css
+++ b/gw2t.css
@@ -3776,20 +3776,21 @@ gem {
 .s16_loot { background-position: -736px 0; }
 .s16_map_bf { background-position: -752px 0; }
 .s16_map_bs { background-position: -768px 0; }
-.s16_map_ds { background-position: -784px 0; }
-.s16_map_eb { background-position: -800px 0; }
-.s16_map_ld { background-position: -816px 0; }
-.s16_mastery { background-position: -832px 0; }
-.s16_matrix { background-position: -848px 0; }
-.s16_money { background-position: -864px 0; }
-.s16_monument { background-position: -880px 0; }
-.s16_mysticcoin { background-position: -896px 0; }
-.s16_pvp { background-position: -912px 0; }
-.s16_starting { background-position: -928px 0; }
-.s16_token { background-position: -944px 0; }
-.s16_view { background-position: -960px 0; }
-.s16_wiki { background-position: -976px 0; }
-.s16_youtube { background-position: -992px 0; }
+.s16_map_dm { background-position: -784px 0; }
+.s16_map_ds { background-position: -800px 0; }
+.s16_map_eb { background-position: -816px 0; }
+.s16_map_ld { background-position: -832px 0; }
+.s16_mastery { background-position: -848px 0; }
+.s16_matrix { background-position: -864px 0; }
+.s16_money { background-position: -880px 0; }
+.s16_monument { background-position: -896px 0; }
+.s16_mysticcoin { background-position: -912px 0; }
+.s16_pvp { background-position: -928px 0; }
+.s16_starting { background-position: -944px 0; }
+.s16_token { background-position: -960px 0; }
+.s16_view { background-position: -976px 0; }
+.s16_wiki { background-position: -992px 0; }
+.s16_youtube { background-position: -1008px 0; }
 
 coppercoin, silvercoin, goldcoin, gemunit, karmaunit, laurelunit {
 	display: inline-block;
