--- a/style/overlay.css
+++ b/style/overlay.css
@@ -146,12 +146,12 @@
 .mapCoordinatesBar {
 	bottom: 6px; left: 6px;
 }
-.mapCoordinatesBar input {
+.mapCoordinatesBar input[type="text"] {
 	width: 80px; height: 12px;
 	margin-left: 5px;
 	font-size: 12px;
 }
-input.mapCoordinatesName {
+#mapCoordinatesName, #wvwCoordinatesName {
 	width: 116px;
 }
 .mapTime {
