--- a/style/features.css
+++ b/style/features.css
@@ -489,15 +489,6 @@ dt.jpzListNameHover {
 /* =============================================================================
  *  Guild Missions
  * ========================================================================== */
-.chlCountdown {
-	margin: 12px;
-	text-align: center;
-	font-family: Trebuchet MS, Menomonia;
-	font-size: 32px;
-	color: #bbcc77;
-	text-shadow: 0px 0px 2px black;
-}
-
 #gldButtons {
 	margin-top: 8px;
 	text-align: center;
@@ -798,6 +789,15 @@ input[type="text"].rarity_Legendary { color: #9933ff; /* violet */ }
 /* =============================================================================
  *  Personal Checklist
  * ========================================================================== */
+.chlCountdown {
+	margin: 12px;
+	text-align: center;
+	font-family: Trebuchet MS, Menomonia;
+	font-size: 32px;
+	color: #bbcc77;
+	text-shadow: 0px 0px 2px black;
+}
+
 #chlDungeon, #chlRaid {
 	margin-top: 12px;
 	margin-left: 12px;
@@ -900,6 +900,7 @@ input[type="text"].rarity_Legendary { color: #9933ff; /* violet */ }
 .chl_4_1 { background-position: -288px 0; }
 .chl_4_2 { background-position: -320px 0; }
 .chl_4_3 { background-position: -352px 0; }
+.chl_4_4 { background-position: -384px 0; }
 
 .chlDungeonBar label {
 	display: inline;
