--- a/style/wvw.css
+++ b/style/wvw.css
@@ -497,19 +497,20 @@ a.lboLink {
 	margin: 0;
 	padding: 0;
 }
-#wvwServerList {
+#wvwServerListContainer {
 	position: absolute;
 	top: -10px;
 	right: 8px;
+}
+#wvwServerListBar {
 	width: 128px;
+	height: 14px;
 	font-family: Trebuchet MS, Menomonia;
 	font-size: 14px;
-	color: white;
+	color: white !important;
 	opacity: 0.7;
-	border-radius: 1px;
 	background: rgba(32, 32, 32, 1);
 	border: 1px solid rgba(255, 255, 255, 0.4);
-	outline: none;
 	box-shadow: 0px 0px 10px rgba(255, 255, 255, 0.8);
 	text-shadow:
 		0px 1px 1px #000,
@@ -517,8 +518,13 @@ a.lboLink {
 		1px 0px 1px #000,
 		-1px 0px 1px #000;
 }
-#wvwLog:hover #wvwServerList {
+#wvwLog:hover #wvwServerListBar {
 	opacity: 0.9;
+}
+.wvwServerListResults {
+	width: 200px;
+	max-height: 200px;
+	left: -100px;
 }
 
 #wvwLogContainer {
